# RepoPulse

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh.yml
.streamlit/: config.toml  secrets.toml.example
docs/: architecture.md  deployment.md  metric_dictionary.md
src/repopulse/: __init__.py  _timeutils.py  cli.py  config.py  demo_runtime.py  github_client.py  metrics.py  pipeline.py  report.py  sample_data.py  storage.py
tests/: test_app.py  test_cli.py  test_config.py  test_demo_runtime.py  test_github_client.py  test_metrics.py  test_pipeline.py  test_report.py  test_storage.py  test_timeutils.py  test_window_metrics.py
