[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repopulse"
version = "0.2.0"
description = "Open-source GitHub repository health and contributor analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RepoPulse contributors" }]
dependencies = [
  "duckdb>=1.2,<2",
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "streamlit>=1.41,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
repopulse = "repopulse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
